@@ -216,6 +216,12 @@
         <td align="center" valign="top">No</td>
       </tr>
       <tr>
+        <td valign="top">nowarn</td>
+        <td valign="top">Whether the <code>-nowarn</code> switch should be passed to
+          the JDK compiler; defaults to <code>no</code>.</td>
+        <td align="center" valign="top">No</td>
+      </tr>
+      <tr>
         <td valign="top">fork</td>
         <td valign="top">Whether to execute <code>javac</code> using the JDK compiler
           externally; defaults to <code>yes</code>.</td>
